[metadata]
name=numcu
description=Numerical CUDA-based Python library built on CuVec
long_description=file: README.rst
long_description_content_type=text/x-rst
license=MPL 2.0
license_file=LICENCE
url=https://github.com/AMYPAD/NumCu
project_urls=
    Changelog=https://github.com/AMYPAD/NumCu/releases
    Documentation=https://amypad.github.io/NumCu
author=Casper da Costa-Luis
author_email=casper.dcl@physics.org
classifiers=
    Development Status :: 4 - Beta
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
[options]
setup_requires=
    setuptools>=42
    wheel
    setuptools_scm[toml]
    cuvec>=2.11.0
    miutil[cuda]>=0.4.0
    scikit-build>=0.11.0
    cmake>=3.18
    ninja
install_requires=
    importlib_resources; python_version < "3.9"
    cuvec>=2.11.0
    numpy
python_requires=>=3.6
[options.extras_require]
dev=
    pre-commit
    pytest
    pytest-cov
    pytest-timeout
    pytest-xdist

[flake8]
max_line_length=99
extend-ignore=E228,E261
exclude=.git,__pycache__,build,dist,.eggs

[yapf]
spaces_before_comment=15, 20
arithmetic_precedence_indication=true
allow_split_before_dict_value=false
coalesce_brackets=True
column_limit=99
each_dict_entry_on_separate_line=False
space_between_ending_comma_and_closing_bracket=False
split_before_named_assigns=False
split_before_closing_bracket=False

[isort]
profile=black
line_length=99
known_first_party=numcu,tests

[tool:pytest]
timeout=30
log_level=INFO
python_files=tests/test_*.py
testpaths=tests
addopts=-v --tb=short -rxs -W=error -n=2 --durations=0 --durations-min=1 --cov=numcu --cov-report=term-missing --cov-report=xml
